<resources>
    <string name="app_name">Prototype</string>
    <string name="add_std">Add Student</string>
    <string name="name">Name</string>
    <string name="fees">Fees</string>
    <string name="day">Day</string>
    <string name="grade">Grade</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="start_date">Start Date</string>

</resources>
