<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add_sdt_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/add_std"
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_add_sdt_lbl"
            android:layout_margin="20dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fees"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/fees">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_day_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_fees"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/day"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sp_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_day_lbl"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp" />


        <TextView
            android:id="@+id/tv_grade_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_day"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/grade"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/sp_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_grade_lbl"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/iv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sp_grade"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_time_start" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sp_grade"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/iv_end"
            android:layout_toEndOf="@+id/iv_start"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/start_time"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/iv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sp_grade"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_time_end" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sp_grade"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/iv_end"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/end_time"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/iv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/iv_start"
            android:src="@drawable/ic_time_table" />


        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/iv_start"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/iv_start_date"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/start_date"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_start_date"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel" />
    </RelativeLayout>
</ScrollView>

